MIR-842 fix layout issues caused by bootsrap 4 migration
* adds spacer class to basekt buttons
* sets colors for all badges
* modifies search query js manipultaion
* fixes icons in result list filter
* fixes option menu hover effekt
* fixes line break in publication editor
* fixes space and size issues in pub editor
* fixes spacing, improves colors in cbrowser

--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/forms.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/forms.scss
@@ -126,7 +126,6 @@
 
 .expand-item {
     position: absolute;
-    font-size: 21px;
     padding-top: 9px;
     cursor: pointer;
     padding-left: 5px;
