--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/helper.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/helper.scss
@@ -19,7 +19,6 @@
     float:none;
     display:inline-block;
     vertical-align:middle;
-    margin-right:-4px;
 }
 
 @mixin clearfix {
